--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,10 +27,10 @@
   </div>
 
   <div class="form-group">
-    <label for="devoured">devoured?</label><br>
     <input type="radio" name="devoured" value="1" checked> devoured!<br>
-    <input type="radio" name="devoured" value="0"> ate
   </div>
+    
+    
 
-  <button type="submit">Add burgers</button>
+  <button type="submit">submit</button>
 </form>
